Tested and Updated Main